--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Dependencies
 
 # Permalinks
-permalink:        /:title
+permalink:        pretty
 remote_theme: poole/hyde
 #relative_permalinks: true
 
